<resources>
    <string name="app_name">Hydroponic Monitoring System</string>
    <string name="carlos_name">Karolus Karen</string>
    <string name="prodi_name">Program Studi Pendidikan Teknik Elektro</string>
    <string name="major_name">Jurusan Pendidikan Teknik Elektro</string>
    <string name="faculty_name">Fakultas Teknik</string>
    <string name="campus_name">Universitas Negeri Makassar</string>
    <string name="years">2021</string>
    <string name="dash">-</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="moisture">Moisture</string>
    <string name="tds">TDS</string>
    <string name="water">Water</string>
    <string name="ph">PH</string>
    <string name="bad">Buruk</string>
    <string name="medium">Sedang</string>
    <string name="good">Baik</string>
    <string name="desc">Aplikasi ini dikembangkan oleh Karolus Karen, mahasiswa Pendidikan Teknik Elektro angkatan 2017, dengan bantuan Pembimbing yaitu Bapak Zulhaji, S.T., M.T. dan Ibu Dr. Ir. Riana T. Mangesa M.T. Aplikasi ini berlaku hanya untuk monontoring kondisi tanaman hidroponik. Pengembangan alat dan aplikasi ini bertujuan untuk membantu petani dalam proses merawat tanaman hidroponik sehingga pekerjaan petani menjadi lebih mudah dan efektif.</string>
</resources>