<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/card_item"
                android:layout_marginHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        style="@style/icon_item"
                        android:src="@drawable/ic_temperature" />

                    <TextView
                        android:id="@+id/title_temperature"
                        style="@style/title_item"
                        android:text="@string/temperature" />

                    <TextView
                        android:id="@+id/value_temperature"
                        style="@style/value_item"
                        android:layout_below="@id/title_temperature"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/status_temperature"
                        style="@style/status_item" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/card_item"
                android:layout_marginHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        style="@style/icon_item"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/title_humidity"
                        style="@style/title_item"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/value_humidity"
                        style="@style/value_item"
                        android:layout_below="@id/title_humidity"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/status_humidity"
                        style="@style/status_item" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/card_item"
                android:layout_marginHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        style="@style/icon_item"
                        android:padding="3dp"
                        android:src="@drawable/ic_ph_meter" />

                    <TextView
                        android:id="@+id/title_ph"
                        style="@style/title_item"
                        android:text="@string/ph" />

                    <TextView
                        android:id="@+id/value_ph"
                        style="@style/value_item"
                        android:layout_below="@id/title_ph"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/status_ph"
                        style="@style/status_item" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/card_item"
                android:layout_marginHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        style="@style/icon_item"
                        android:src="@drawable/ic_tds" />

                    <TextView
                        android:id="@+id/title_tds"
                        style="@style/title_item"
                        android:text="@string/tds" />

                    <TextView
                        android:id="@+id/value_tds"
                        style="@style/value_item"
                        android:layout_below="@id/title_tds"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/status_tds"
                        style="@style/status_item"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/card_item"
                android:layout_marginHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        style="@style/icon_item"
                        android:padding="2dp"
                        android:src="@drawable/ic_water_drop" />

                    <TextView
                        android:id="@+id/title_water"
                        style="@style/title_item"
                        android:text="@string/water" />

                    <TextView
                        android:id="@+id/value_water"
                        style="@style/value_item"
                        android:layout_below="@id/title_water"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/status_water"
                        style="@style/status_item"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>