<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="135dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:background="@drawable/bg_white_round_top">

        <include layout="@layout/item_fragment_home" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginHorizontal="46dp"
        app:cardCornerRadius="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_hydroponic_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lines="2"
                    android:paddingHorizontal="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/dark_icon"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="@color/semiTransparent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/green" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="end"
                    android:lines="2"
                    android:text="@string/date_and_time"
                    android:textColor="@color/dark_icon"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_clock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="100dp"
                    android:src="@drawable/ic_clock"
                    app:tint="@color/dark_icon" />

                <ImageView
                    android:id="@+id/img_date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/img_clock"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_date"
                    app:tint="@color/dark_icon" />

                <TextView
                    android:id="@+id/value_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_date"
                    android:layout_alignTop="@id/img_clock"
                    android:layout_alignBottom="@id/img_clock"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/img_clock"
                    android:text="@string/dash"
                    android:textColor="@color/dark_icon" />

                <TextView
                    android:id="@+id/value_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_date"
                    android:layout_alignBottom="@id/img_date"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/img_date"
                    android:text="@string/dash"
                    android:textColor="@color/dark_icon" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>